# codescene-mcp-server

./: .coveragerc  .gitignore  AGENT.md  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  build.rs  cli-checksums.sha256  cs.sha256  cs.sha256.asc  install.ps1  manifest.json  pyproject.toml  run-integration-tests.ps1  run-integration-tests.sh  server.json  uninstall.ps1
.claude-plugin/: marketplace.json
Formula/: cs-mcp.rb
claude-code-plugin/: README.md
dev-docs/: mcp-tool-description-guidelines.md
docker/: linux-exe-builder.Dockerfile
docs/: AGENTS-full.md  AGENTS-standalone.md  ace-refactoring-with-mcp.md  building-docker-locally.md  building-executable-locally.md  building-linux-executable-with-docker.md  tools.md  (+8 more)
rust/: Cargo.toml  build.rs
rust/src/: ace_client.rs  api_client.rs  business_case.rs  cli.rs  config.rs  configure.rs  delta.rs  docker.rs  environment.rs  errors.rs  event_properties.rs  hashing.rs  http.rs  license.rs  main.rs  platform.rs  prompts.rs  resources.rs  startup.rs  tracking.rs  version_checker.rs
rust/src/docs/code-health/: business-case.md
rust/src/prompts/: mod.rs  plan_code_health_refactoring.rs  review_code_health.rs
rust/src/tools/: code_health_auto_refactor.rs  code_health_review.rs  code_health_score.rs  code_ownership_for_path.rs  common.rs  explain_code_health.rs  get_config.rs  list_technical_debt_goals_for_project.rs  list_technical_debt_goals_for_project_file.rs  list_technical_debt_hotspots_for_project.rs  list_technical_debt_hotspots_for_project_file.rs  mod.rs  select_project.rs  set_config.rs
(+360 files in other folders)
